fix columns data alignment

--- a/public/themes/bootstrap/scss/_common.scss
+++ b/public/themes/bootstrap/scss/_common.scss
@@ -1433,6 +1433,8 @@ input#auto_increment_opt {
 .pma_table {
   td {
     position: static;
+    /* rtl:ignore */
+    text-align: left !important;
   }
 
   tbody td span {
@@ -1445,7 +1447,10 @@ input#auto_increment_opt {
   }
 
   th.draggable {
+    /* rtl:ignore */
+    text-align: left;
     span {
+      /* rtl:ignore */
       margin-right: 10px;
     }
   }
