--- a/public/themes/pmahomme/scss/_common.scss
+++ b/public/themes/pmahomme/scss/_common.scss
@@ -1614,6 +1614,8 @@ input#auto_increment_opt {
 .pma_table {
   td {
     position: static;
+    /* rtl:ignore */
+    text-align: left !important;
   }
 
   tbody td span {
@@ -1626,7 +1628,10 @@ input#auto_increment_opt {
   }
 
   th.draggable {
+    /* rtl:ignore */
+    text-align: left;
     span {
+      /* rtl:ignore */
       margin-right: 10px;
     }
   }
